kubernetes/restapi/flashcard-goapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flashcard-goapi
  name: flashcard-goapi
  namespace: restapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flashcard-goapi
  strategy: {}
  template:
    metadata:
      labels:
        app: flashcard-goapi
    spec:
      containers:
        - image: zanamira43/flashcardapi-go-fiber:0.1
          name: flashcard-goapi-pod
          imagePullPolicy: IfNotPresent  
          ports:
            - containerPort: 3001
          resources: {}
status: {}
