kubernetes/restapi/flashcard-goapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flashcard-goapi-ingress
  namespace: restapi
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - flashcardapi.zanamira83.info
    secretName: flashcard-api-tls
  ingressClassName: nginx
  rules:
  - host: flashcardapi.zanamira83.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flashcard-goapi-service
            port: 
             number: 3001
